add issue and reward ranking